add view for download Workbench settings

--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -65,6 +65,16 @@
           </li>
 
           <li>
+            <a class="dropdown-item d-flex align-items-center" href="{{ url_for('workbench.settings') }}">
+              <i class="bi bi-tools"></i>
+              <span>Workbench Settings</span>
+            </a>
+          </li>
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+
+          <li>
             <a class="dropdown-item d-flex align-items-center" href="https://help.usody.com/" target="_blank">
               <i class="bi bi-question-circle"></i>
               <span>Need Help?</span>
