--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -102,6 +102,13 @@
     </li><!-- End Dashboard Nav -->
 
     <li class="nav-item">
+      <a class="nav-link collapsed" href="{{ url_for('inventory.snapshotslist') }}">
+        <i class="bi-menu-button-wide"></i>
+        <span>Uploaded Snapshots</span>
+      </a>
+    </li>
+
+    <li class="nav-item">
       <a class="nav-link collapsed" href="{{ url_for('inventory.devicelist') }}">
         <i class="bi-menu-button-wide"></i>
         <span>Unassigned devices</span>
