add column created and put order descendent from created field

--- a/ereuse_devicehub/templates/labels/label_list.html
+++ b/ereuse_devicehub/templates/labels/label_list.html
@@ -47,6 +47,7 @@
                       <th scope="col">Type</th>
                       <th scope="col">Provider</th>
                       <th scope="col">Device</th>
+                      <th scope="col">Created</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -62,6 +63,7 @@
                         </a>
                         {% endif %}
                       </td>
+                      <td>{{ tag.created.strftime('%H:%M %d-%m-%Y') }}</td>
                     </tr>
                     {% endfor %}
                   </tbody>
