--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -104,14 +104,14 @@
     <li class="nav-heading">Devices</li>
 
     <li class="nav-item">
-      <a class="nav-link collapsed" href="{{ url_for('inventory.devicelist') }}">
+      <a class="nav-link collapsed" href="{{ url_for('inventory.devicelist') }}?only_unassigned=false">
         <i class="bi bi-laptop"></i>
         <span>All devices</span>
       </a>
     </li>
 
     <li class="nav-item">
-      <a class="nav-link collapsed" href="{{ url_for('inventory.devicelist') }}?unassigned=true">
+      <a class="nav-link collapsed" href="{{ url_for('inventory.devicelist') }}">
         <i class="bi-menu-button-wide"></i>
         <span>Unassigned devices</span>
       </a>
