Dropped .badge-pill use the .rounded-pill utility instead.
Breaking change on Boostrap 5
https://getbootstrap.com/docs/5.0/migration/#badges

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -361,7 +361,7 @@
                         <br />
                         <h6>
                           {% for lot in dev.lots %}
-                            <span class="badge badge-pill bg-dark">{{ lot.name }}</span>
+                            <span class="badge rounded-pill bg-dark">{{ lot.name }}</span>
                           {% endfor %}
                         </h6>
                         {% endif %}
