--- a/ereuse_devicehub/templates/inventory/device_detail.html
+++ b/ereuse_devicehub/templates/inventory/device_detail.html
@@ -124,15 +124,15 @@
             <div class="tab-pane fade profile-overview" id="status">
               <h5 class="card-title">Status Details</h5>
               <div class="row">
-                <div class="col-lg-3 col-md-4 label">Physical States</div>
+                <div class="col-lg-3 col-md-4 label">Physical State</div>
                 <div class="col-lg-9 col-md-8">{{ device.physical or '' }}</div>
               </div>
               <div class="row">
-                <div class="col-lg-3 col-md-4 label">Trading States</div>
-                <div class="col-lg-9 col-md-8">{{ device.last_action_trading  or ''}}</div>
+                <div class="col-lg-3 col-md-4 label">Lifecycle States</div>
+                <div class="col-lg-9 col-md-8">{{ device.last_action_trading or ''}}</div>
               </div>
               <div class="row">
-                <div class="col-lg-3 col-md-4 label">Usage States</div>
+                <div class="col-lg-3 col-md-4 label">Allocated States</div>
                 <div class="col-lg-9 col-md-8">{{ device.usage or '' }}</div>
               </div>
             </div>
