fix state instead of states

--- a/ereuse_devicehub/templates/inventory/device_detail.html
+++ b/ereuse_devicehub/templates/inventory/device_detail.html
@@ -132,7 +132,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-lg-3 col-md-4 label">Lifecycle States</div>
+                <div class="col-lg-3 col-md-4 label">Lifecycle State</div>
                 <div class="col-lg-9 col-md-8">
                     {% if device.status %}
                     {{ device.status.type }}
@@ -140,7 +140,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-lg-3 col-md-4 label">Allocated States</div>
+                <div class="col-lg-3 col-md-4 label">Allocated State</div>
                 <div class="col-lg-9 col-md-8">
                     {% if device.allocated_status %}
                     {{ device.allocated_status.type }}
