--- a/ereuse_devicehub/templates/inventory/device_create.html
+++ b/ereuse_devicehub/templates/inventory/device_create.html
@@ -36,9 +36,9 @@
                       <label for="name" class="form-label">Type *</label>
                       <select id="type" class="form-control" name="type" required="">
                         <option value="">Select one Type</option>
-                        <optgroup label="Computer Monitor">
-                          <option value="Monitor"
-                          {% if form.type.data == 'Monitor' %} selected="selected"{% endif %}>Monitor</option>
+                        <optgroup label="Monitor">
+                          <option value="ComputerMonitor"
+                          {% if form.type.data == 'Monitor' %} selected="selected"{% endif %}>Computer Monitor</option>
                         </optgroup>
                         <optgroup label="Mobile">
                           <option value="Smartphone"
