--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -111,19 +111,21 @@
       </a>
     </li><!-- End Dashboard Nav -->
 
+    <li class="nav-heading">Snapshots</li>
+
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="{{ url_for('inventory.snapshotslist') }}">
+        <i class="bi-menu-button-wide"></i>
+        <span>Uploaded Snapshots</span>
+      </a>
+    </li>
+
     <li class="nav-heading">Devices</li>
 
     <li class="nav-item">
       <a class="nav-link collapsed" href="{{ url_for('inventory.devicelist') }}?only_unassigned=false">
         <i class="bi bi-laptop"></i>
         <span>All devices</span>
-      </a>
-    </li>
-
-    <li class="nav-item">
-      <a class="nav-link collapsed" href="{{ url_for('inventory.snapshotslist') }}">
-        <i class="bi-menu-button-wide"></i>
-        <span>Uploaded Snapshots</span>
       </a>
     </li>
 
