--- a/ereuse_devicehub/templates/inventory/snapshots_list.html
+++ b/ereuse_devicehub/templates/inventory/snapshots_list.html
@@ -44,7 +44,7 @@
                           {{ snap.snapshot_uuid }}
                       </td>
                       <td>
-                          {{ snap.workbench_version }}
+                          {{ snap.version }}
                       </td>
                       <td>
                         {% if snap.snapshot %}
