--- a/ereuse_devicehub/templates/inventory/snapshots_list.html
+++ b/ereuse_devicehub/templates/inventory/snapshots_list.html
@@ -54,7 +54,7 @@
                         {% endif %}
                       </td>
                       <td>
-                          {{ snap.severity }}
+                          {{ snap.get_status() }}
                       </td>
                       <td>
                           {{ snap.description }}
