--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -454,5 +454,5 @@
     perPage: 20
   })
 </script>
-<script src="{{ url_for('static', filename='js/main_inventory.js') }}"></script>
+<script src="{{ url_for('static', filename='js/main_inventory.build.js') }}"></script>
 {% endblock main %}
