modify updated and add registered

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -350,8 +350,8 @@
                       <th scope="col">Lifecycle Status</th>
                       <th scope="col">Allocated Status</th>
                       <th scope="col">Physical Status</th>
-                      <th scope="col" data-type="date" data-format="DD-MM-YYYY">Updated in</th>
-                      <th scope="col" data-type="date" data-format="DD-MM-YYYY hh:mm:ss">Registered in</th>
+                      <th scope="col" data-type="date" data-format="YYYY-MM-DD">Updated in</th>
+                      <th scope="col" data-type="date" data-format="YYYY-MM-DD hh:mm:ss">Registered in</th>
                       <th scope="col"></th>
                     </tr>
                   </thead>
