--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -75,11 +75,13 @@
               <button class="nav-link" data-bs-toggle="tab" data-bs-target="#trade-documents-list">Documents</button>
             </li>
 
+            {% if lot.transfer %}
             <li class="nav-item">
               <button class="nav-link" data-bs-toggle="tab" data-bs-target="#edit-transfer">
               Transfer ({% if lot.transfer.closed %}Closed{% else %}Open{% endif %})
               </button>
             </li>
+            {% endif %}
 
           </ul>
           {% endif %}
