add view for advanced search

--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -26,6 +26,11 @@
             style="float: right;">DHID</span></li>
         <li class="dropdown-item"><i class="bi bi-folder2"></i> lots <span class="badge bg-secondary"
             style="float: right;">Name</span></li>
+        <li class="dropdown-item">
+          <small class="text-muted">
+            <a href="{{ url_for('inventory.advanced_search')}}">Advanced Search</a>
+          </small>
+        </li>
       </ul>
     </form>
   </div><!-- End Search Bar -->
