add snapshotLog in old api

--- a/ereuse_devicehub/templates/inventory/snapshots_list.html
+++ b/ereuse_devicehub/templates/inventory/snapshots_list.html
@@ -28,7 +28,7 @@
                       <th scope="col">SID</th>
                       <th scope="col">Snapshot id</th>
                       <th scope="col">Version</th>
-                      <th scope="col">Device</th>
+                      <th scope="col">DHID</th>
                       <th scope="col">Status</th>
                       <th scope="col" data-type="date" data-format="DD-MM-YYYY">Time</th>
                     </tr>
