--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -90,6 +90,16 @@
               Transfer ({% if lot.transfer.closed %}<span class="text-danger">Closed</span>{% else %}<span class="text-success">Open</span>{% endif %})
               </button>
             </li>
+            <li class="nav-item">
+              <button class="nav-link" data-bs-toggle="tab" data-bs-target="#edit-delivery-note">
+                Delivery Note
+              </button>
+            </li>
+            <li class="nav-item">
+              <button class="nav-link" data-bs-toggle="tab" data-bs-target="#edit-receiver-note">
+                Receiver Note
+              </button>
+            </li>
             {% endif %}
 
           </ul>
@@ -479,6 +489,64 @@
                         {% if field == form_transfer.code %}
                         <span class="text-danger">*</span>
                         {% endif %}
+                        {{ field }}
+                        {% if field.errors %}
+                          <p class="text-danger">
+                            {% for error in field.errors %}
+                              {{ error }}<br/>
+                            {% endfor %}
+                          </p>
+                        {% endif %}
+                      {% endif %}
+                      </div>
+                    {% endif %}
+                  {% endfor %}
+
+                  <div>
+                    <a href="{{ url_for('inventory.lotdevicelist', lot_id=lot.id) }}" class="btn btn-danger">Cancel</a>
+                    <button class="btn btn-primary" type="submit">Save</button>
+                  </div>
+                </form>
+              </div>
+              <div id="edit-delivery-note" class="tab-pane fade edit-delivery-note">
+                <h5 class="card-title">Delivery Note</h5>
+                <form method="post" action="{{ url_for('inventory.edit_transfer', lot_id=lot.id) }}" class="row g-3 needs-validation" novalidate>
+                  {{ form_delivery.csrf_token }}
+
+                  {% for field in form_delivery %}
+                    {% if field != form_delivery.csrf_token %}
+                      <div class="col-12">
+                      {% if field != form_delivery.type %}
+                        {{ field.label(class_="form-label") }}
+                        {{ field }}
+                        {% if field.errors %}
+                          <p class="text-danger">
+                            {% for error in field.errors %}
+                              {{ error }}<br/>
+                            {% endfor %}
+                          </p>
+                        {% endif %}
+                      {% endif %}
+                      </div>
+                    {% endif %}
+                  {% endfor %}
+
+                  <div>
+                    <a href="{{ url_for('inventory.lotdevicelist', lot_id=lot.id) }}" class="btn btn-danger">Cancel</a>
+                    <button class="btn btn-primary" type="submit">Save</button>
+                  </div>
+                </form>
+              </div>
+              <div id="edit-receiver-note" class="tab-pane fade edit-receiver-note">
+                <h5 class="card-title">Receiver Note</h5>
+                <form method="post" action="{{ url_for('inventory.edit_transfer', lot_id=lot.id) }}" class="row g-3 needs-validation" novalidate>
+                  {{ form_receiver.csrf_token }}
+
+                  {% for field in form_receiver %}
+                    {% if field != form_receiver.csrf_token %}
+                      <div class="col-12">
+                      {% if field != form_receiver.type %}
+                        {{ field.label(class_="form-label") }}
                         {{ field }}
                         {% if field.errors %}
                           <p class="text-danger">
