--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -463,6 +463,7 @@
 <!-- Custom Code -->
 <script>
   let table = new simpleDatatables.DataTable("table", {
+    perPageSelect: [5, 10, 15, 20, 25, 50, 100],
     perPage: 20
   })
 </script>
