--- a/ereuse_devicehub/templates/labels/print_labels.html
+++ b/ereuse_devicehub/templates/labels/print_labels.html
@@ -67,6 +67,12 @@
                 <div class="col-1">
                 </div>
                 <div class="col label">
+                  <label class="col-form-label col-sm-2">Logo</label>
+                  <div class="col-sm-10">
+                    <div class="input-group mb-3">
+                      <input class="form-control" id="width-tag" name='width-tag' type="file" value="62" min="52" max="300" />
+                    </div>
+                  </div>
                   <label class="col-form-label col-sm-2">Size</label>
                   <div class="col-sm-10">
                     <div class="input-group mb-3">
