--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -45,6 +45,12 @@
       </li><!-- End Search Icon-->
 
       <li class="nav-item dropdown pe-3">
+        <a class="nav-link nav-profile dropdown-toggle" href="{{ url_for('inventory.export', export_id='lots') }}">
+          Report
+        </a><!-- End Report -->
+      </li>
+
+      <li class="nav-item dropdown pe-3">
 
         <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
           <i class="bi bi-person-circle" style="font-size: 36px;"></i>
