add link to devices lot export

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -247,6 +247,12 @@
                     </a>
                   </li>
                   <li>
+                    <a href="javascript:export_file('devices_lots')" class="dropdown-item">
+                      <i class="bi bi-file-spreadsheet"></i>
+                      Devices Incoming and Outgoing Lots Spreadsheet
+                    </a>
+                  </li>
+                  <li>
                     <a href="javascript:export_file('certificates')" class="dropdown-item">
                       <i class="bi bi-eraser-fill"></i>
                       Erasure Certificate
