change link of export devices lots

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -249,7 +249,7 @@
                   <li>
                     <a href="javascript:export_file('devices_lots')" class="dropdown-item">
                       <i class="bi bi-file-spreadsheet"></i>
-                      Devices Incoming and Outgoing Lots Spreadsheet
+                      Devices Lots Spreadsheet
                     </a>
                   </li>
                   <li>
