add download iso

--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -95,7 +95,7 @@
           <li>
             <a class="dropdown-item d-flex align-items-center" href="{{ url_for('workbench.settings') }}">
               <i class="bi bi-tools"></i>
-              <span>Workbench Settings</span>
+              <span>Workbench</span>
             </a>
           </li>
           <li>
